deleted database
